<resources>
    <string name="app_name">GitHubUserWatcher</string>
    <string name="con_desc_user_avatar">Аватар пользователя</string>
    <string name="label_name">Имя:</string>
    <string name="label_location">Местоположение:</string>
    <string name="label_company">Компания:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_twitter">Twitter:</string>
    <string name="label_blog">Блог:</string>
    <string name="label_followers">Подписчики:</string>
    <string name="label_following">Подписан:</string>
    <string name="label_created_at">Зарегистрирован:</string>
    <string name="label_id">id:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_enter_login">Введите логин:</string>
    <string name="log_in">Войти</string>
    <string name="hint_enter_password">Введите пароль:</string>
    <string name="test_login">test61495</string>
    <string name="test_password">cW23ERdeAQ12S</string>
    <string name="log_out">Выйти</string>
    <string name="label_biography">Биография:</string>
    <string name="login_web"><a href="http://developer.alexanderklimov.ru/">Войти через web browser</a></string>
    <string name="message_wrong_login_or_password">Неправильный логин или пароль</string>
    <string name="message_failed_connect_to_server">Не удалось установить соединение с сервером</string>
    <string name="message_no_internet_connection">Нет интернет соединения</string>
    <string name="message_failed_get_token">Не удалось получить токен авторизации</string>
    <string name="failed_to_load_logged_user">Не удалось загрузить данные о пользователе</string>
</resources>