<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".screens.userdetail.UserDetailedActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintStart_toStartOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/con_desc_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:layout_marginEnd="4dp">

            <TextView
                android:id="@+id/tvLabelName"
                style="@style/Label"
                android:text="@string/label_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelName"
                app:layout_constraintStart_toEndOf="@+id/tvLabelName"
                app:layout_constraintTop_toTopOf="@+id/tvLabelName" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

            <TextView
                android:id="@+id/tvLabelLocation"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textViewLocation"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelLocation"
                app:layout_constraintStart_toEndOf="@+id/tvLabelLocation"
                app:layout_constraintTop_toTopOf="@+id/tvLabelLocation" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelLocation" />

            <TextView
                android:id="@+id/tvLabelCompany"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textViewCompany"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelCompany"
                app:layout_constraintStart_toEndOf="@+id/tvLabelCompany"
                app:layout_constraintTop_toTopOf="@+id/tvLabelCompany" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelCompany" />

            <TextView
                android:id="@+id/tvLabelEmail"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textViewEmail"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelEmail"
                app:layout_constraintStart_toEndOf="@+id/tvLabelEmail"
                app:layout_constraintTop_toTopOf="@+id/tvLabelEmail" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

            <TextView
                android:id="@+id/tvLabelTwitter"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_twitter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textViewTwitter"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelTwitter"
                app:layout_constraintStart_toEndOf="@+id/tvLabelTwitter"
                app:layout_constraintTop_toTopOf="@+id/tvLabelTwitter" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelTwitter" />

            <TextView
                android:id="@+id/tvLabelBlog"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_blog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                android:id="@+id/textViewBlog"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelBlog"
                app:layout_constraintStart_toEndOf="@+id/tvLabelBlog"
                app:layout_constraintTop_toTopOf="@+id/tvLabelBlog" />

            <View
                android:id="@+id/view6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelBlog" />

            <TextView
                android:id="@+id/tvLabelFollowers"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_followers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <TextView
                android:id="@+id/textViewFollowers"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelFollowers"
                app:layout_constraintStart_toEndOf="@+id/tvLabelFollowers"
                app:layout_constraintTop_toTopOf="@+id/tvLabelFollowers" />

            <View
                android:id="@+id/view7"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelFollowers" />

            <TextView
                android:id="@+id/tvLabelFollowing"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_following"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <TextView
                android:id="@+id/textViewFollowing"
                style="@style/Value"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelFollowing"
                app:layout_constraintStart_toEndOf="@+id/tvLabelFollowing"
                app:layout_constraintTop_toTopOf="@+id/tvLabelFollowing" />

            <View
                android:id="@+id/view8"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelFollowing" />

            <TextView
                android:id="@+id/tvLabelCreatedAt"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/label_created_at"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view8" />

            <TextView
                android:id="@+id/textViewCreatedAt"
                style="@style/Value"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelCreatedAt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>