<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragments.UserDetailedFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/stroke_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewAvatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/con_desc_user_avatar"
                        android:elevation="8dp"
                        android:padding="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:strokeColor="@color/stroke_color"
                        app:strokeWidth="1dp"
                        tools:srcCompat="@tools:sample/avatars" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonLogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/neucha"
                        android:text="@string/log_out"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/textViewLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/neucha"
                        android:shadowColor="@color/colorAccent"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
                        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                        app:layout_constraintTop_toTopOf="@+id/imageViewAvatar"
                        tools:text="justdoiter" />

                    <TextView
                        android:id="@+id/tvLabelName"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/neucha"
                        android:text="@string/label_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

                    <TextView
                        android:id="@+id/textViewName"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelName"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelName"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelName"
                        tools:text="Donovan" />

                    <View
                        android:id="@+id/view"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

                    <TextView
                        android:id="@+id/tvLabelLocation"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/textViewLocation"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelLocation"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelLocation"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelLocation"
                        tools:text="Rostov" />

                    <View
                        android:id="@+id/view2"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelLocation" />

                    <TextView
                        android:id="@+id/tvLabelCompany"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_company"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2" />

                    <TextView
                        android:id="@+id/textViewCompany"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCompany"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelCompany"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelCompany"
                        tools:text="Company" />

                    <View
                        android:id="@+id/view3"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelCompany" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view3">


                        <TextView
                            android:id="@+id/tvLabelBio"
                            style="@style/Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_biography"
                            app:layout_constraintStart_toStartOf="parent" />

                        <com.ms.square.android.expandabletextview.ExpandableTextView

                            android:id="@+id/expandableTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            expandableTextView:animDuration="200"
                            expandableTextView:maxCollapsedLines="1">

                            <TextView
                                android:id="@id/expandable_text"
                                style="@style/Value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="mmmmmm" />

                            <ImageButton
                                android:id="@id/expand_collapse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|end"
                                android:background="@android:color/transparent"
                                android:padding="16dp"
                                tools:ignore="ContentDescription" />

                        </com.ms.square.android.expandabletextview.ExpandableTextView>


                    </LinearLayout>

                    <View
                        android:id="@+id/view9"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <TextView
                        android:id="@+id/tvLabelEmail"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view9" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelEmail"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelEmail"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelEmail"
                        tools:text="23@mail.com" />

                    <View
                        android:id="@+id/view4"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

                    <TextView
                        android:id="@+id/tvLabelTwitter"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_twitter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view4" />

                    <TextView
                        android:id="@+id/textViewTwitter"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelTwitter"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelTwitter"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelTwitter"
                        tools:text="Hayabusa" />

                    <View
                        android:id="@+id/view5"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelTwitter" />

                    <TextView
                        android:id="@+id/tvLabelBlog"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_blog"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view5" />

                    <TextView
                        android:id="@+id/textViewBlog"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelBlog"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelBlog"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelBlog"
                        tools:text="blog.bb.bb" />

                    <View
                        android:id="@+id/view6"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelBlog" />

                    <TextView
                        android:id="@+id/tvLabelFollowers"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_followers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view6" />

                    <TextView
                        android:id="@+id/textViewFollowers"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelFollowers"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelFollowers"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelFollowers"
                        tools:text="1999" />

                    <View
                        android:id="@+id/view7"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelFollowers" />

                    <TextView
                        android:id="@+id/tvLabelFollowing"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_following"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view7" />

                    <TextView
                        android:id="@+id/textViewFollowing"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelFollowing"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelFollowing"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelFollowing"
                        tools:text="45" />

                    <View
                        android:id="@+id/view8"
                        style="@style/Separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelFollowing" />

                    <TextView
                        android:id="@+id/tvLabelCreatedAt"
                        style="@style/Label"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_created_at"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view8" />

                    <TextView
                        android:id="@+id/textViewCreatedAt"
                        style="@style/Value"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCreatedAt"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelCreatedAt"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelCreatedAt"
                        tools:text="25.10.12" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBarLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:visibility="invisible" />
    </FrameLayout>
</ScrollView>
